# hello-world

./: README.md
.github/workflows/: workflow2.yaml
misc/demo/: Dockerfile  Dockerfile-app  Dockerfile-crawler  README.md  docker-compose.yaml  dotenv  products.xlsx  pyproject.toml  users.xlsx
misc/demo/demo/: app.py
